Small z-index fix

--- a/src/components/tech-stack/TechStack.scss
+++ b/src/components/tech-stack/TechStack.scss
@@ -14,6 +14,7 @@
     align-items: center;
     flex-flow: wrap;
     width: 500px;
+    z-index: 0;
 
     .tech-stack__item {
       margin: 20px;
